--- a/_sass/_custom.sass
+++ b/_sass/_custom.sass
@@ -9,11 +9,11 @@ body
   left: 0
   bottom: 0
   width: 100%
-  height: 100%  
+  height: 100%
 .logo
   width: 500px
   height: 500px
-  background: url("/assets/imgs/muuus.png") no-repeat center center
+  background: url("./assets/imgs/muuus.png") no-repeat center center
   background-size: 100% auto
   margin: 0 auto
   position: relative
