--- a/css/main.sass
+++ b/css/main.sass
@@ -3,4 +3,7 @@
 // ---
 
 // Import partials from `sass_dir` (defaults to `_sass`)
-@import "../_sass/site"
+@import "../_sass/base"
+@import "../_sass/layout"
+@import "../_sass/custom"
+@import "../_sass/variables"
