--- a/_sass/_custom.sass
+++ b/_sass/_custom.sass
@@ -12,6 +12,7 @@ body
   height: 100%
 .logo
   width: 500px
+  max-width: 100%
   height: 500px
   background: url("../assets/imgs/muuus.png") no-repeat center center
   background-size: 100% auto
