--- a/css/main.css
+++ b/css/main.css
@@ -109,14 +109,6 @@ pre {
 /**
  * Wrapper
  */
-.wrapper {
-  max-width: -webkit-calc($content-width - ($spacing-unit * 2));
-  max-width: calc($content-width - ($spacing-unit * 2));
-  margin-right: auto;
-  margin-left: auto;
-  padding-right: 30px;
-  padding-left: 30px; }
-
 /**
  * Clearfix
  */
@@ -270,6 +262,7 @@ body {
 
 .logo {
   width: 500px;
+  max-width: 100%;
   height: 500px;
   background: url("../assets/imgs/muuus.png") no-repeat center center;
   background-size: 100% auto;
