--- a/_sass/_custom.sass
+++ b/_sass/_custom.sass
@@ -1,6 +1,8 @@
 body
   background-color: #000000
 
+*
+  -webkit-font-smoothing: antialiased
 
 .wrapper
   position: absolute
@@ -11,12 +13,22 @@ body
   width: 100%
   height: 100%
 .logo
-  width: 500px
+  width: 320px
   max-width: 100%
-  height: 500px
+  height: 320px
   background: url("../assets/imgs/muuus.png") no-repeat center center
   background-size: 100% auto
-  margin: 0 auto
+  margin: 100px auto 40px
   position: relative
-  top: 50%
-  transform: translateY(-50%)
+  // top: 50%
+  // transform: translateY(-50%)
+
+.about-wrapper,
+.why-wrapper
+  width: 70%
+  color: #E3E3E3
+  margin: 40px auto
+  h3
+    color: #FFC901
+    text-transform: uppercase
+    font-weight: bold
