--- a/_sass/_variables.sass
+++ b/_sass/_variables.sass
@@ -1,5 +1,5 @@
 // Our variables
-$base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif
+$base-font-family: 	"source-sans-pro", sans-serif
 $base-font-size: 16px
 $base-font-weight: 400
 $small-font-size: $base-font-size * 0.875
