--- a/_sass/_custom.sass
+++ b/_sass/_custom.sass
@@ -1,11 +1,8 @@
-body
-  background-color: #000000
-
 *
   -webkit-font-smoothing: antialiased
 
 .wrapper
-  position: absolute
+  position: relative
   top: 0
   right: 0
   left: 0
@@ -13,11 +10,11 @@ body
   width: 100%
   height: 100%
 .logo
-  width: 320px
+  width: 200px
   max-width: 100%
-  height: 320px
-  background: url("../assets/imgs/muuus.png") no-repeat center center
-  background-size: 100% auto
+  height: auto
+  // background: url("../assets/imgs/muuus.png") no-repeat center center
+  // background-size: 100% auto
   margin: 100px auto 40px
   position: relative
   // top: 50%
@@ -32,3 +29,7 @@ body
     color: #FFC901
     text-transform: uppercase
     font-weight: bold
+
+
+#muuus_logo
+  fill: white
