--- a/_sass/_variables.sass
+++ b/_sass/_variables.sass
@@ -1,14 +1,14 @@
 // Our variables
-$base-font-family: 	"source-sans-pro", sans-serif
-$base-font-size: 16px
+$base-font-family: 	"droid-sans", sans-serif
+$base-font-size: 14px
 $base-font-weight: 400
 $small-font-size: $base-font-size * 0.875
 $base-line-height: 1.5
 
 $spacing-unit: 30px
 
-$text-color: #111
-$background-color: #fdfdfd
+$text-color: white
+$background-color: #202123
 $brand-color: #2a7ae2
 
 $grey-color: #828282
